# Minicomputer

./: CMakeLists.txt  CPackLists.txt  README.md  common.h  minicomputer.desktop
cpu/: cpu.cpp  cpu.h  main.c  main.cpp
editor/: Memory.cpp  Memory.h  communicate.h  i18n.h  main.cpp  syntheditor.cxx  syntheditor.h  utility.h  widgets.h
po/fr/: minicomputer.po
scripts/: i18n.sh
